cert-manager/snowdrop-me/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    project: snowdrop-site-angular
    provider: nodeshift
  name: snowdrop-site-angular
spec:
  host: snowdrop.me
  port:
    targetPort: 8080
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGNDCCBRygAwIBAgIIOK+bA1Xt0iYwDQYJKoZIhvcNAQELBQAwgbQxCzAJBgNV
[...]
      QXr8W7SAlVU=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Allow
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCVufS9ay/fKxRM
[...]
      SjjC7w0FdBYbU7CYggnUfg==
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: snowdrop-site-angular
    weight: 100
  wildcardPolicy: None
